--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,10 @@
 
 /*** Miscellaneous ***/
 
-html {
+/* html {
   overflow-x: hidden;
   height: 100%;
-}
+} */
 
 body {
   font-family: 'Poppins', sans-serif;
